修复一些重要的错误，并重构部分代码逻辑 提供了使用样本便于参考用法