@@ -5,7 +5,7 @@ plugins {
 apply plugin: 'maven-publish'
 
 group 'com.github.EB-wilson'
-version '1.4-B1'
+version '1.5-A1'
 
 repositories {
   mavenCentral()
@@ -15,7 +15,7 @@ repositories {
 dependencies {
   implementation 'org.ow2.asm:asm:9.3'
 
-  annotationProcessor "com.github.Anuken:jabel:0.7.0"
+  annotationProcessor 'com.github.EB-wilson.UniverseCore:annotations:1.7.4'
 }
 
 publishing {
@@ -36,6 +36,21 @@ generateMetadataFileForMavenPublication{
 
 allprojects{
   tasks.withType(JavaCompile){
-    options.compilerArgs.addAll(['--release', '8'])
+    options.encoding = "UTF-8"
+
+    sourceCompatibility = 17
+    targetCompatibility = 9
+
+    options.fork = true
+    options.forkOptions.jvmArgs.addAll([
+            "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+            "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+            "--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+            "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+            "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+            "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+    ])
+
+    options.compilerArgs.addAll(['--release', '9'])
   }
 }
